# openthaigpt-pretraining

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  README.md  Thaigov_crawl_lists.csv  coverage.xml  dedup_minhashlsh.py  nuch_crawl_thaigov_news.ipynb  nuch_dedup_minhashlsh.ipynb  pyproject.toml  requirements.txt  testCrawl.csv  test_py.py  test_read_jsonl_pantip.py  thaigov_news_01.csv
src/core/: pyproject.toml  setup.py
src/core/openthaigpt_pretraining/: __init__.py  example.py
src/data/: README.md  pyproject.toml  setup.py
src/data/notebook/: nuch_crawl_thaigov_news.ipynb
src/data/openthaigpt_pretraining_data/: __init__.py  dedup_minhashlsh.py  utils.py
src/data/openthaigpt_pretraining_data/blind_pdpa/: __init__.py
src/data/openthaigpt_pretraining_data/cc100/: clean_cc100_experiment.py  requirements.txt
src/data/openthaigpt_pretraining_data/clean_seo/: clean_seo.py
src/data/openthaigpt_pretraining_data/core/: Additional_datasets_preprocess.py  PRD_Preprocess.py  keywords.py  metadata.py  minhash.py  perplexity.py  preprocess.py  processing_config.py  testcase.py  words_th.txt.dvc
src/data/openthaigpt_pretraining_data/decontamination/: .gitignore  constants.py  decontamintate.py  generate_minhash.py  utils.py
src/data/openthaigpt_pretraining_data/deduplication/: deduplication.py  generate_minhash.py
src/data/openthaigpt_pretraining_data/internet/: README.md
src/data/openthaigpt_pretraining_data/mc4/: pattern.py  preprocess.py
src/data/openthaigpt_pretraining_data/merge_pdf/: __init__.py  merge_pdf.py  pdf_correction_rules_added.txt  pdf_correction_rules_new.txt
src/data/openthaigpt_pretraining_data/oscar/: preprocess.py  testcase.py
src/data/openthaigpt_pretraining_data/pantip/: 2g_pantip_preprocess.py  3g_pantip_preprocess.py  clean_data_pantip3g.py  pantip_3g_clean_unreadable.py  reformat_3g_data.py  text_cleaning.py
src/data/openthaigpt_pretraining_data/web_crawls_mcot/: crawl_mcot.py  getpages_mcot.py
src/data/openthaigpt_pretraining_data/web_crawls_mfa/: crawl_gov_achievements.py  crawl_news.py  crawl_top_news.py
src/data/scripts/: README.md  input.jsonl  input.txt  main.py  output.jsonl  output.txt
src/data/scripts/blind_pdpa/: blind.py  submit.sh
src/data/scripts/crawl_admincourt/: README.md  convert_to_jsonl.py  scrape_admincourt.py
src/data/scripts/crawl_krisdika/: README.md  enactment_req_body.json  scrape_king_krisdika.py  scrape_krisdika.py  scrape_polity_krisdika.py
src/data/scripts/crawl_mcot/: mcot_script.py
src/data/scripts/crawl_mfa/: crawl_top_stories.ipynb  crawl_top_stories.py  embassy_cosulate.py  gov_achievements.py  other_news.py  press_release.py  speeches.py  top_news.py
src/data/scripts/crawl_set_annual_report/: README.md  convet_to_jsonl.py  listedCompanies_en_US.csv  scrape_set_annual.py
src/data/scripts/crawl_thaigov/: .gitignore  README.md  Thaigov_crawl_lists.csv.dvc  nuch_crawl_thaigov_all.py
src/data/scripts/decontamination/: README.md  (+2 more)
src/model/: pyproject.toml  setup.py
src/model/configuration_example/: README.md  config.yaml  data_preprocess.yaml  example_config.yaml  example_data_preprocess.yaml  example_lora.yaml  spm_training.yaml
src/model/experiments/: run.py
src/model/openthaigpt_pretraining_model/: __init__.py  data_wrapper.py  spm_trainer.py  utils.py
src/model/scripts/: llama_thai_token_test.py
(+319 files in other folders)
