[build-system]
requires = [
    "setuptools>=40.8.0",
    "wheel"
]

[project]
name = "openthaigpt_pretraining"
version = "0.1.0"
description = "OpenThaiGPT Pretraining Task."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "hydra-core",
    "dvc >= 3.23.0, <4",
    "dvc-gs >=2.22.1, <3"
]