[build-system]
requires = [
    "setuptools>=40.8.0",
    "wheel"
]

[project]
name = "openthaigpt_pretraining_data"
version = "0.1.0"
description = "OpenThaiGPT Pretraining Task."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "xformers>=0.0.18",
    "llama@git+https://github.com/facebookresearch/llama.git",
    "sentencepiece>=0.1.98",
    "fairscale>=0.4.13",
    "lion-pytorch>=0.0.7",
    "transformers>=4.28.1",
    "datasets>=2.12.0",
    "zstandard>=0.21.0",
    "pythainlp>=4.0.0",
    "kenlm==0.1",
    "scipy==1.10.1",
    "jsonlines==3.1.0"
]

