[build-system]
requires = [
    "setuptools>=40.8.0",
    "wheel"
]

[project]
name = "openthaigpt_pretraining_data"
version = "0.1.0"
description = "OpenThaiGPT Pretraining Task."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "sentencepiece",
    "datasets>=2.12.0",
    "zstandard>=0.21.0",
    "pythainlp>=4.0.0",
    "kenlm==0.1",
    "scipy==1.10.1",
    "jsonlines==3.1.0",
    "datasketch<2.0.0",
    "beautifulsoup4==4.12.2, < 5",
    "scikit-learn==1.2.2, < 2",
]

